--- a/accounts/templates/account/login.html
+++ b/accounts/templates/account/login.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Qu'ils sont beaux sur les montagnes, Les pieds de celui qui apporte de bonnes nouvelles, Qui publie la paix ! De celui qui apporte de bonnes nouvelles, Qui publie le salut ! De celui qui dit à Sion : ton Dieu règne ! Esaïe 52 : 7" />
     <meta property="og:url" content="/"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/static/images/icon/favicon2.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://res.cloudinary.com/vh-cam/image/upload/v1630529071/favicon2_whzoxl.ico" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'accounts/css/account.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
